--- a/src/css/content-section.css
+++ b/src/css/content-section.css
@@ -3,20 +3,22 @@
     margin-top: 32px;
     margin-bottom: 32px;
 }
+
 .gallery {
-display: flex;
-    
+    display: flex;
+
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 24px;
 }
+
 .img-card {
     width: 360px;
     overflow: hidden;
     border-radius: 6px;
     background: #e0e0e0;
-     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
 
 .img-info {
@@ -26,8 +28,8 @@ display: flex;
     background-color: #fff;
     padding: 6px 12px;
     font-family: "Montserrat", sans-serif;
-        font-size: 12px;
-        
+    font-size: 12px;
+
 }
 
 .info {
@@ -44,16 +46,21 @@ display: flex;
 .icon-info {
     fill: #0055d4;
 }
+
 .icon-info:hover {
     fill: darkblue;
-    
+
 }
 
 .img-info .info:first-child {
     cursor: pointer;
 }
 
- 
+.load-btn {
+    display: flex;
+    margin: 0 auto;
+    margin-top: 24px;
+}
 
 .loader {
     width: 16px;
@@ -62,7 +69,7 @@ display: flex;
     border-radius: 4px;
     background: currentColor;
     display: block;
-    
+
     position: relative;
     left: 45%;
     margin-top: 150px;
@@ -93,6 +100,8 @@ display: flex;
     left: 60px;
 }
 
+
+
 @keyframes animloader {
     0% {
         top: 0;
@@ -107,5 +116,56 @@ display: flex;
     100% {
         top: 0;
         color: #0055d4;
+    }
+}
+
+.page-loader,
+.page-loader:before,
+.page-loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    animation-fill-mode: both;
+    animation: bblFadInOut 1.8s infinite ease-in-out;
+
+}
+
+.page-loader {
+    color: #3638d3;
+    font-size: 7px;
+    position: relative;
+    text-indent: -9999em;
+    transform: translateZ(0);
+    animation-delay: -0.16s;
+    display: block;
+    margin: 2rem auto;
+}
+
+.page-loader:before,
+.page-loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+
+.page-loader:before {
+    left: -3.5em;
+    animation-delay: -0.32s;
+}
+
+.page-loader:after {
+    left: 3.5em;
+}
+
+@keyframes bblFadInOut {
+
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+
+    40% {
+        box-shadow: 0 2.5em 0 0;
     }
 }
